[project]
name = "dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "streamlit (>=1.48.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "dashboard", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
